# mutagen

./: .env.example  .gitignore  AGENT.md  CONTRIBUTING.md  FUTURE_UPDATES.md  LICENSE  PRE_RELEASE_CHECKLIST.md  README.md  SECURITY.md  batch_audit.py  mutagen.py  pyproject.toml  requirements.txt  run_all.py  setup.ps1  vuln.c
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  mutagen-action.yml
docs/: CLI_USAGE.md  architecture.md
docs/plans/: 2026-06-17-enterprise-scaling.md
mutagen/: __main__.py  ast_validator.py  chunker.py  ci_helper.py  cli.py  compiler.py  compliance.py  core.py  decompiler.py  defects4c.py  executor.py  instrumenter.py  models.py  mutators.py  orchestrator.py  poc_finder.py  reporter.py  session_supervisor.py  state.py  static_analyzer.py  swarm_balancer.py
targets/: 01_buffer_overflow.c  02_format_string.c  03_integer_overflow.c  03_integer_overflow_test.c  04_use_after_free.c  05_integer_overflow.c  06_complex_logic.c  07_double_free.c  08_off_by_one.c  09_network_server.c  09_stdin_target.c  10_null_dereference.c  11_complex_auth.c  12_custom_parser.c  13_long_db_parser.c  14_complex_2026_challenge.c  15_interpreter_vm_oob.c  16_cve_2026_6691_mongoc_sasl.c  17_stateful_multiplexer.c  18_client_side_router.js  19_auth_bypass.go  19_target.py  20_multi_layered_state_logic.c  21_global_state_reuse_decompression.c  22_asyn_signal_uaf.c  23_command_injection.py  24_web_router.py  README.md  multiplex_parser.c  test_crash.c
tests/: conftest.py  test_ast_validator.py  test_batch_audit.py  test_chunker.py  test_ci_helper.py  test_claude.py  test_cli.py  test_compliance.py  test_coverage.py  test_dashboard_api.py  test_decompiler.py  test_defects4c.py  test_deobfuscator.py  test_engines.py  test_enhancements.py  test_executor.py  test_multi_agent.py  test_multifile_build.py  test_multilang.py  test_mutators.py  test_poc_finder.py  test_reporter.py  test_rust_support.py  test_sandbox.py  test_self_healing.py  test_session_supervisor.py  test_static_analyzer.py  test_swarm_balancer.py  test_web_analysis.py  test_webhooks.py
(+16 files in other folders)
