[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutagen-fuzzer"
version = "2.1.0"
description = "AI-Powered Zero-Day Fuzzer & Auto-Patcher — uses LLMs to find, exploit, and patch memory corruption vulnerabilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bunny-sysd" },
]
keywords = [
    "fuzzer", "security", "vulnerability-scanner", "llm", "ai-security",
    "zero-day", "exploit", "cybersecurity", "pentesting", "buffer-overflow",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "google-genai>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "anthropic>=0.3.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
ollama = ["requests>=2.28.0"]
all = ["openai>=1.0.0", "requests>=2.28.0", "anthropic>=0.3.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
mutagen = "mutagen.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/mutagen"
Documentation = "https://github.com/yourusername/mutagen#readme"
Repository = "https://github.com/yourusername/mutagen"
Issues = "https://github.com/yourusername/mutagen/issues"

[tool.setuptools.packages.find]
include = ["mutagen*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
